# house-of-stake-contracts

./: AGENTS.md  API.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build_all.sh  build_release.sh  rust-toolchain.toml
.github/workflows/: build-wasm.yml  build.yml  ci.yml  claude-code-review.yml  clippy.yml  format.yml  test.yml
common/: Cargo.toml
common/src/: account.rs  bps.rs  events.rs  lib.rs  test_utils.rs  types.rs  voting.rs
integration-tests/: Cargo.toml
integration-tests/tests/: test_contracts_upgrade.rs  test_lockup.rs  test_staking_contract.rs  test_venear.rs  test_voting.rs  test_voting_fst.rs  test_voting_mainnet.rs  test_voting_partial_delegation.rs  test_voting_queue.rs  test_voting_v2.rs
integration-tests/tests/setup/: mainnet.rs  mod.rs  venear_helpers.rs  voting_helpers.rs
lockup-contract/: Cargo.toml
lockup-contract/src/: lib.rs  owner.rs  owner_callbacks.rs  transfer.rs  venear.rs  venear_ext.rs
lockup-contract/src/tests/: test_utils.rs
merkle-tree/src/: lib.rs
mock-staking-pool-contract/: Cargo.toml
mock-staking-pool-contract/src/: lib.rs
oracle-relay-contract/: Cargo.toml
oracle-relay-contract/src/: lib.rs
res/release/: lockup_contract.wasm  venear_contract.wasm  voting_contract.wasm
res/release/1_0_2/: lockup_contract.wasm  venear_contract.wasm  voting_contract.wasm
res/release/1_0_3/: venear_contract.wasm
res/release/1_1_0/: lockup_contract.wasm  voting_contract.wasm
sandbox-staking-whitelist-contract/src/: lib.rs
scripts/: approve_proposal.sh  build_staking_test_wasms.sh  build_staking_wasm.sh  configure_chat_api_hos_system_configs.sh  delegate.sh  deploy_all.sh  deploy_testnet_staking_contract.sh  deploy_testnet_staking_stack.sh  deploy_testnet_staking_test_code.sh  setup_testnet_near_ai_cloud_farm.sh  switch_chat_api_agent_hosting_prices.sh  upgrade_testnet_staking_farm.sh  upgrade_testnet_staking_price_metadata_fix.sh
staking-contract/: Cargo.toml  DESIGN.md  PLAN.md  README.md
staking-contract/docs/: ACTION_ITEMS.md  API.md  CORE_FEATURES.md  DESIGN.md  EPOCH_SETTLEMENT_CHAIN.md  LAZY_EPOCH_PIPELINE.md  PLAN.md  PR_SUMMARY.md  README.md  REVIEW.md  VENEAR_INTEGRATION.md  variable-stake-hos-plan.md
staking-contract/docs/enhancements/: decoupled-plan-and-stake-update-plan.md  direct-pay-one-off-prices-plan.md  hos-one-off-credits-chat-api-plan.md  merge-lock-entrypoints-plan.md  pending-downgrade-auto-completion-plan.md  recurring-subscription-lock-settlement-plan.md  variable-stake-hos-plan.md
staking-contract/docs/features/: lazy-epoch-pipeline.md  venear-integration.md
staking-contract/docs/issues/: automatic-subscription-downgrade-at-period-end.md
staking-contract/docs/operations/: agent-hosting-workflow.html  chat-api-credits-multi-provider-enhancement.md  private-assistant-multi-provider-billing-plan.md  production-readiness.md  testnet-contract-snapshot.md  testnet-deploy.md
staking-contract/docs/review/: code-review.md  core-features.md
staking-contract/scripts/: build_staking_test_wasms.sh  build_staking_wasm.sh  configure_chat_api_hos_system_configs.sh  deploy_testnet_staking_contract.sh  deploy_testnet_staking_stack.sh  deploy_testnet_staking_test_code.sh  setup_testnet_near_ai_cloud_farm.sh  switch_chat_api_agent_hosting_prices.sh  upgrade_testnet_staking_farm.sh  upgrade_testnet_staking_price_metadata_fix.sh
staking-contract/src/: accounts.rs  config.rs  epoch.rs  events.rs  farm.rs  gas.rs  governance.rs  ids.rs  internal.rs  lib.rs  lock.rs  macros.rs  oracle.rs  oracle_receiver.rs  pause.rs  payments.rs  pool_callbacks.rs  prices.rs  products.rs  rewards.rs  stake.rs  subscriptions.rs  types.rs  unlock.rs  upgrade.rs  utils.rs  validators.rs  withdraw.rs
staking-contract/tests/: README.md  accounts_storage.rs  catalog_admin.rs  catalog_archive.rs  epoch_pipeline_release.rs  farm.rs  governance.rs  lock_catalog_args.rs  lock_flow.rs  lock_validation.rs  oracle_json.rs  payments.rs  rewards.rs  sandbox_epoch_settlement.rs  sandbox_golden_path.rs  sandbox_mock_pool.rs  sandbox_subscription_e2e.rs  storage_per_lock.rs  subscription_lifecycle.rs  unlock_after_expiry.rs  unlock_guards.rs  validators_admin.rs  withdraw_claim.rs
staking-contract/tests/common/: mod.rs
staking-contract/tests/mock_pool/: mod.rs
venear-contract/: Cargo.toml
venear-contract/src/: account.rs  config.rs  delegation.rs  governance.rs  lib.rs  lockup.rs  storage.rs  test_utils.rs  upgrade.rs
voting-contract/: Cargo.toml
voting-contract-v2/: Cargo.toml
voting-contract-v2/src/: bond.rs  config.rs  execute.rs  governance.rs  lib.rs  metadata.rs  proposal.rs  reviewer.rs  upgrade.rs  votes.rs
voting-contract/src/: bond.rs  config.rs  execute.rs  governance.rs  legacy.rs  lib.rs  pause.rs  proposal.rs  queue.rs  reviewer.rs  test_utils.rs  upgrade.rs  votes.rs
voting-contract/src/unit_tests/: bond.rs  governance.rs  mod.rs  pause.rs  proposal.rs  queue.rs  reviewer.rs  test_utils.rs  votes.rs
