[workspace.package]
version = "1.1.1"
authors = ["Fastnear Inc <hello@fastnear.com>"]
edition = "2024"
repository = "https://github.com/fastnear/house-of-stake-contracts"
rust-version = "1.86"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "3"
members = [
    "lockup-contract",
    "venear-contract",
    "voting-contract",
    "staking-contract",
    "mock-staking-pool-contract",
    "merkle-tree",
    "common",
    "integration-tests",
    "sandbox-staking-whitelist-contract",
]

[workspace.dependencies]
near-sdk = { version = "=5.26.1", features = ["wee_alloc", "unstable"] }
near-contract-standards = "=5.26.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
uint = { version = "0.10.0", default-features = false }
hex = "0.4.3"

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
