[package]
name = "common"
description = "This crate provides common types and utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
near-sdk.workspace = true
serde_json.workspace = true
uint.workspace = true
merkle-tree = { path = "../merkle-tree", optional = true }

[features]
# Shared unit-test fixtures. Enabled only via dev-dependencies of contract crates,
# so it never reaches a production wasm build.
test-utils = ["dep:merkle-tree", "near-sdk/unit-testing"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
near-sdk = { workspace = true, features = ["legacy", "unit-testing"] }
serde_json.workspace = true