[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
near-sdk.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"

[dev-dependencies]
common = { path = "../common" }
voting-contract = { path = "../voting-contract" }
near-workspaces = { version = "0.18" }
tokio = { version = "1", features = ["full"] }
