[package]
name = "mock-staking-pool-contract"
description = "Minimal staking-pool stand-in for stake.dao integration tests (matches ext_staking_pool in staking-contract)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk.workspace = true
