[package]
name = "staking-contract"
description = "stake.dao — pooled staking for NEAR AI product billing"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.13.4-rust-1.85.1"
image_digest = "sha256:1f8b71742802f38990d442e8678aa4c0cd1c8317dd3ff493f41c079675d4f35b"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
common = { path = "../common" }
# `unit-testing` enables `testing_env!` / `VMContextBuilder` for `tests/*.rs` (host only).
near-sdk = { workspace = true, features = ["unit-testing"] }
serde_json.workspace = true
schemars = { version = "0.8", features = ["derive"] }
