[package]
name = "staking-contract"
description = "stake.dao — pooled staking for NEAR AI product billing"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
# Pin digest with image tag per https://hub.docker.com/r/sourcescan/cargo-near/tags
# Match `rust-toolchain.toml`; when bumping Rust, pick a matching Docker tag and refresh digest.
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
common = { path = "../common" }
near-sdk.workspace = true
serde_json.workspace = true
schemars = { version = "0.8", features = ["derive"] }

[dev-dependencies]
# `unit-testing` enables `testing_env!` / `VMContextBuilder` for `tests/*.rs` (host only; not in wasm).
near-sdk = { workspace = true, features = ["unit-testing"] }
